services/self-service/src/main/resources/webapp/src/client/app/components/modal/modal.component.css
.modal-dialog {
  width: 525px;
}
.loading_modal {
  text-align: center;
}
.loading_modal .modal-dialog {
  width: 376px;
}
.modal .loading_modal p {
  font-size: 14px;
  color: #718ba6;
  font-weight: 600;
  margin-top: 20px;
  margin-bottom: 0;
}
.modal-header {
  background: #f6fafe;
  border-bottom: 1px solid #edf1f5;
}
.modal-body {
  padding: 35px 15px;
}
.modal-header .modal-title {
  font-weight: 600;
  color: #455c74;
  font-size: 18px;
}
.modal .control-label {
  font-size: 14px;
  font-weight: 600;
  color: #718ba6;
  margin-top: 6px;
}
.modal .form-control {
  font-size: 16px;
  color: #455c74;
}
.modal .form-group small {
  font-size: 12px;
  color: #9cadbe;
}
.modal .btn-success {
  margin-left: 40px;
}
.modal .btn {
  min-width: 140px;
  margin-top: 20px;
}
.modal-content {
  border-radius: 3px;
  overflow: hidden;
}
.modal-header .close {
  margin-top: 3px;
}
.modal .spinner_wrap {
  overflow: hidden;
  display: inline-block;
  width: 130px;
  height: 130px;
  font-size: 0;
  border-radius: 50%;
  background: #96acc4;
  position: relative;
}
.modal .spinner_wrap img {
  width: 100px;
  height: 100px;
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -50px;
  margin-top: -50px;
}

/*
.modal {
  opacity: 0;
  background-color: rgba(0,0,0,0.5);
  display: block!important;
  padding-left: 0px!important;
  -webkit-transform: scale(0);
  transform: scale(0);
  -webkit-transition: opacity .15s linear;
  transition: opacity .15s linear;
}
.modal-open .modal {
  -webkit-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  background-color: rgba(0,0,0,0.5);
}

.modal-dialog {
  -webkit-transition: opacity .15s linear;
  transition: opacity .15s linear;
  -webkit-transform: scale(0);
  transform: scale(0);
}
.modal-open .modal-dialog {
  -webkit-transform: scale(1);
  transform: scale(1);
}
*/

.modal .btn {
  padding: 6px 15px;
  min-width: 141px;
}
.modal .btn-file {
  position: relative;
  overflow: hidden;
  margin-top: 10px;
  float: right;
}
.modal .btn-file input[type=file] {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  min-width: 100%;
  min-height: 100%;
  font-size: 100px;
  text-align: right;
  opacity: 0;
  outline: none;
  background: white;
  cursor: inherit;
  display: block;
}

modal-content {
  display: block;
}

